--- a/style.css
+++ b/style.css
@@ -63,6 +63,7 @@ Sidebar*
     height: calc(100vh - 90px);
     background-color: #000;
     float: left;
+    overflow-y: auto;
 }
 
 
@@ -223,7 +224,6 @@ Main*
 
 /*nav_main*/
 .nav_main{
-    height: 30px;
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
@@ -280,6 +280,9 @@ Main*
     position: relative;
 }
 
+.tracks.most_popular .track img{
+    border-radius: 50%;
+}
 
 
 .track img{
